--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
 <body>
     <!-- 鹦鹉容器 -->
     <div class="parrot-container">
-        <img src="https://static.wikia.nocookie.net/creatures-of-the-deep-app/images/d/d8/Coco.png/revision/latest?cb=20230811155643"
+        <img src="https://s2.loli.net/2025/07/16/mKqcLfGVxdPUHQE.webp"
              alt="鹦鹉" class="parrot">
         
         <!-- 对话气泡固定在鹦鹉右下角 -->
