--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
             欢迎<span class="donate-highlight">扫描上方二维码</span>支持作者继续开发。<br>
             您的支持将帮助我持续改进、维护网站，并添加更多实用功能！<br>
             特别鸣谢：<span class="donate-highlight"> 谨、亚马逊神秘捕蛇男 </span>等多位大佬（供图）！<br>
-            诚挚感谢：<span class="donate-highlight"> yizzz4 </span>大佬（赞助）！
+            <!-- 诚挚感谢：<span class="donate-highlight"> yizzz4 </span>大佬（赞助）！ -->
         </p>
     </div>
 
@@ -1027,6 +1027,8 @@
         document.addEventListener('DOMContentLoaded', function () {
             // ============= 鹦鹉语录功能 =============
             const quotes = [
+                "诚挚感谢：阁楼微光、yizzz4等大佬友情赞助！！！",
+                "能在此相伴实属有幸。",
                 "所有钓鱼佬都爱吹牛，除你和我——但说真的，我对你都有点怀疑。",
                 "你能像电影里那样让船漂移吗？",
                 "你是不是也常忘了自己为啥来这儿？",
@@ -1040,9 +1042,7 @@
                 "找到大鱼老巢的地方，必有掠食者蹲守。",
                 "遇见<Jay>真是太好啦。",
                 "最爱随便甩竿等惊喜——愿者上钩才刺激！",
-                "今天钓鱼佬扎堆，鱼怕不是要咬疯了！",
-                "能在此相伴实属有幸。",
-                "这个嘛……",
+                "今天钓鱼佬扎堆，鱼怕不是要咬疯了！",                
                 "这儿木头也太多了伐？！"
             ];
             
