--- a/index.html
+++ b/index.html
@@ -1129,41 +1129,41 @@
                 "这儿木头也太多了伐？！",
                 "湖里最吓人的是什么？水里突然碰你腿的东西，绝对是水怪！",
                 "钓到过骨鱼没？没钓到？说明你睡太早！",
-                "密报：孔雀螳螂虾昼伏夜出",
-                "美洲鳗专挑夜间猎食",
-                "河流入海口的冷水域鳟鱼成群",
-                "旗鱼这类大家伙常在东北部外海出没",
-                "阿拉斯加！蛮荒之地，得拿出原住民的强悍劲儿",
+                "密报：孔雀螳螂虾昼伏夜出。",
+                "美洲鳗专挑夜间猎食。",
+                "河流入海口的冷水域鳟鱼成群。",
+                "旗鱼这类大家伙常在东北部外海出没。",
+                "阿拉斯加！蛮荒之地，得拿出原住民的强悍劲儿。",
                 "见过帝王蟹吗？夜间限定捕捞！",
-                "搏战鲑鱼要等到黄昏时分",
-                "想看海象？东北角特定岛屿蹲守",
+                "搏战鲑鱼要等到黄昏时分。",
+                "想看海象？东北角特定岛屿蹲守。",
                 "法定禁止弄醒熊自拍➔好笑在真有人干过！",
-                "Alaska源自原住民语Alyeska,意为'伟大国度'",
-                "大嘴杜父鱼仅夜间上钩",
-                "澳洲80%动物都是特有物种",
-                "考拉日均睡20小时,慕了",
-                "鳄鱼就爱暖和的岩石海岸",
+                "Alaska源自原住民语Alyeska,意为⌈伟大国度⌋。",
+                "大嘴杜父鱼仅夜间上钩。",
+                "澳洲80%动物都是特有物种。",
+                "考拉日均睡20小时,慕了。",
+                "鳄鱼就爱暖和的岩石海岸。",
                 "大堡礁➔地球最大生态系统！",
                 "鲨鱼水域藏了什么鱼种？还不去探探！",
                 "儒艮看着圆滚滚，其实浑身腱子肉！",
                 "在澳大利亚的我们，现在算不算'脚朝上'?",
                 "官方认证！苏格兰国兽竟是➔独角兽！",
                 "见过苏格兰人扔木杆吗？人家那可是正经比赛！",
-                "巨型墨鱼只在夜间出没",
-                "珊瑚礁区能找到昆士兰石斑鱼",
-                "泰国的稻田生态系统滋养着特有淡水鱼",
-                "湄公巨鲶➔全球最大的淡水鱼王之一",
+                "巨型墨鱼只在夜间出没。",
+                "珊瑚礁区能找到昆士兰石斑鱼。",
+                "泰国的稻田生态系统滋养着特有淡水鱼。",
+                "湄公巨鲶➔全球最大的淡水鱼王之一。",
                 "泰国坐拥850种淡水鱼,生物宝库!",
                 "尼斯湖水怪？史前巨兽还是变异鳗？您猜~",
                 "千湖之国(他们管湖叫Loch!),鱼群多到数不清！",
                 "曼谷全称长到能当绕口令！",
-                "传说南方曾有座失落神庙",
+                "传说南方曾有座失落神庙。",
                 "⚠️避开污染水接触！护具要穿牢！生物勿惊扰！",
-                "变异的只是外表，生灵仍守本心",
-                "泡过这水的人最后说：'你绝对想不到，这味道像...咳咳'",
-                "此地生机勃勃➔直到爆炸改写一切",
-                "发光水痕=发光生物标记",
-                "钓变异鱼需特殊技巧"
+                "变异的只是外表，生灵仍守本心。",
+                "泡过这水的人最后说：你绝对想不到，这味道像...咳咳。",
+                "此地生机勃勃➔直到爆炸改写一切。",
+                "发光水痕=发光生物标记。",
+                "钓变异鱼需特殊技巧。"
             ];
 
             const quoteElement = document.getElementById('quote');
